--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "react-swagger-gen",
-  "version": "1.0.0",
-  "main": "generate.ts",
+  "name": "redux-toolkit-swagger-gen",
+  "version": "0.1.0",
+  "description": "Redux Toolkit API client generator from Swagger/OpenAPI specifications",
+  "main": "dist/generate.js",
+  "types": "dist/generate.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build",
     "generate": "ts-node --files generate.ts",
     "swagger-gen": "npm --prefix . run generate"
+  },
+  "peerDependencies": {
+    "@reduxjs/toolkit": ">=1.6.0",
+    "react": ">=16.8.0"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "github:apidevtools/json-schema-ref-parser",
@@ -20,5 +32,17 @@
     "@types/node": "^16.11.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "keywords": [
+    "redux",
+    "redux-toolkit",
+    "swagger",
+    "openapi",
+    "generator"
+  ],
+  "author": "",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
   }
 }
