--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es2017",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
+    "declaration": true,
     "outDir": "./dist",
-    "lib": ["esnext","DOM"]
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["./**/*.ts","./**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["generate.ts", "./**/*.ts","./**/*.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
