--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "redux-toolkit-swagger-gen",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Redux Toolkit API client generator from Swagger/OpenAPI specifications",
   "main": "dist/generate.js",
+  "type": "module",
   "types": "dist/generate.d.ts",
   "files": [
     "dist",
@@ -43,7 +44,7 @@
     "openapi",
     "generator"
   ],
-  "author": "",
+  "author": "Rodel Letran",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
