--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "redux-toolkit-swagger-gen",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Redux Toolkit API client generator from Swagger/OpenAPI specifications",
-  "main": "dist/generate.js",
+  "main": "dist/index.js",
   "type": "commonjs",
   "types": "dist/generate.d.ts",
   "files": [
@@ -14,13 +14,12 @@
     "build": "tsc",
     "prepare": "npm run build",
     "generate": "node dist/generate.js",
-    "swagger-gen": "node dist/generate.js",
+    "swagger-gen": "./dist/bin/cli.js",
     "dev": "ts-node --files src/generate.ts",
     "start": "node dist/generate.js"
   },
   "bin": {
-    "swagger-gen": "./dist/generate.js",
-    "redux-toolkit-swagger-gen": "./dist/generate.js"
+    "swagger-gen": "./dist/bin/cli.js"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
