--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,14 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "bin"]
+  "include": [
+    "src/**/*",
+    "src/templates/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "bin",
+    "src/api/**/*"
+  ]
 }
