--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "prepare": "npm run build",
     "generate": "node ./bin/swagger-gen.js",
     "swagger-gen": "node ./bin/swagger-gen.js",
+    "swagger-gen:src": "ts-node --files src/generate.ts --url src/test/swagger-files/money-exchange.json --output src/api-money-exchange.json --clean --verbose",
+    "swagger-gen:dist": "node ./bin/swagger-gen.js --url src/test/swagger-files/identity.json --output src/api-identity --clean --verbose",
     "dev": "ts-node --files src/generate.ts",
     "start": "node dist/generate.js"
   },
@@ -24,13 +26,13 @@
   },
   "peerDependencies": {
     "react": ">=16.8.0"
-  },
-  "dependencies": {
+  },  "dependencies": {
     "@apidevtools/json-schema-ref-parser": "github:apidevtools/json-schema-ref-parser",
     "@reduxjs/toolkit": "^2.4.0",
     "@types/react": "^19.0.10",
     "axios": "^1.8.3",
     "mustache": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "yargs": "^17.7.2",
     "zod": "^3.11.6"
   },
