Refactor template loading and enhance API interface handling
- Replaced deprecated fsRead function with loadTemplate in helpers.ts for improved template loading.
- Enhanced getNames function in interface.ts to include request body model and interface names, supporting both OpenAPI 2.0 and 3.x styles.
- Added template-loader.ts to manage template file loading from multiple potential paths.
- Created package.json and package-lock.json for test-install directory to facilitate local testing of redux-toolkit-swagger-gen.

--- a/.npmignore
+++ b/.npmignore
@@ -12,3 +12,11 @@ tmp
 temp
 temp/*
 .temp
+
+# Ensure templates are included
+!src/templates/**
+!dist/src/templates/**
+
+# Test files
+src/test/
+src/api*/
